Fix alignment of sidebar widgets

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -277,7 +277,7 @@ Sidebar widgets
   }
   @media (min-width: $breakpoint-s) {
     @include flexbox;
-    @include align-items(baseline);
+    @include align-items(flex-start);
     @include flex-direction(row);
     @include justify-content(flex-start);
     .widget { @include flex(0, 1, 45%); }
